<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
                name="viewModel"
                type="com.eval.simplesales.ui.make_sale.SimpleSalesMakeSaleViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sale_number_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sale_number_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_number_value"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/sale_number_value_textview"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/sale_number_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/zero_value_temp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/sale_number_title_textview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/client_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                app:layout_constraintTop_toBottomOf="@+id/sale_number_layout">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/client_info_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/client_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="@+id/client_info_name_edittext"
                    app:layout_constraintBottom_toBottomOf="@id/client_info_name_edittext"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/client_info_name_edittext"
                    android:layout_width="250sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/client_name_hint"
                    android:textSize="14sp"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/client_info_title_textview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_info_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                app:layout_constraintTop_toBottomOf="@+id/client_info_layout">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_info_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_info_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/product_info_name_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_name_hint"
                    android:textSize="14sp"
                    android:singleLine="true"
                    app:layout_constraintTop_toBottomOf="@+id/product_info_title_textview"/>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/product_info_quantity_edittext"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_quantity_hint"
                    android:digits="0123456789,"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:singleLine="true"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_info_name_edittext"/>

            <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/product_info_price_edittext"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:hint="@string/product_price_hint"
                    android:digits="0123456789,"
                    android:inputType="numberDecimal"
                    android:textSize="14sp"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_info_name_edittext"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/product_include_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_include_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_info_quantity_edittext"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_total_price_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/product_total_price_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_info_quantity_edittext"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_total_currency_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brazilian_real_symbol"
                    app:layout_constraintEnd_toStartOf="@+id/product_total_price_value_textview"
                    app:layout_constraintTop_toBottomOf="@+id/product_total_price_title_textview"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_total_price_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/zero_value_temp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_total_price_title_textview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/product_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="20dp"
                app:layout_constraintTop_toBottomOf="@id/product_info_layout"/>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/product_final_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_recyclerview">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_final_quantity_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_final_quantity_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_final_quantity_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/zero_value_temp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/product_final_quantity_title_textview"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_final_price_title_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_final_price_title"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/product_final_quantity_title_textview"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/product_final_price_value_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/zero_value_temp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/product_final_quantity_title_textview"
                    app:layout_constraintStart_toEndOf="@+id/product_final_price_title_textview"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/product_sale_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_sale_cancel_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/product_sale_save_button"
                app:layout_constraintTop_toBottomOf="@+id/product_final_layout"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/product_sale_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_sale_save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/product_sale_cancel_button"
                app:layout_constraintTop_toBottomOf="@+id/product_final_layout"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>