<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_name_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/client_name_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/product_name_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/product_name_title_textview"
            app:layout_constraintStart_toEndOf="@id/product_name_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/quantity_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/product_name_title_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_quantity_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_quantity_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/quantity_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/quantity_title_textview"
            app:layout_constraintStart_toEndOf="@id/quantity_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/quantity_title_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/price_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_price_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/price_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/price_title_textview"
            app:layout_constraintStart_toEndOf="@id/price_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_price_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/price_title_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_price_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/total_price_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/total_price_title_textview"
            app:layout_constraintStart_toEndOf="@id/total_price_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/total_price_title_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/description_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_description_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/description_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/description_title_textview"
            app:layout_constraintStart_toEndOf="@id/description_title_textview"/>

</androidx.constraintlayout.widget.ConstraintLayout>