<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/client_name_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/client_name_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/client_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/client_name_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/client_name_title_textview"
            app:layout_constraintStart_toEndOf="@id/client_name_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_quantity_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_quantity_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/client_name_title_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_quantity_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_quantity_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/total_quantity_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/total_quantity_title_textview"
            app:layout_constraintStart_toEndOf="@id/total_quantity_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_price_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/total_quantity_value_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/total_price_value_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_price_title"
            android:textSize="14sp"
            android:padding="10dp"
            app:layout_constraintTop_toTopOf="@id/total_price_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/total_price_title_textview"
            app:layout_constraintStart_toEndOf="@id/total_price_title_textview"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/products_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/products_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/total_price_title_textview"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/product_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toBottomOf="@id/products_title_textview"/>



</androidx.constraintlayout.widget.ConstraintLayout>